all user sign up login otp verifications apis complete and made some changes to explore page

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,8 @@
 PORT = 3000
 MONGO_URI = 'mongodb+srv://agroinvest:1234@agroinvest.uwln6uw.mongodb.net/neovoyager'
+
+OFFICIAL_EMAIL="agroinvest101@gmail.com"
+OFFICIAL_PASS="argjnsfueavsakqx"
+
+JWT_KEY="neovoyager"
+JWT_REFRESHTOKEN_KEY="refreshneovoyager"
